force-app/main/default/objects/Customer_Pay_Plan_Header__c/Customer_Pay_Plan_Header__c.object-meta.xml
<CustomObject>
    <label>Customer Pay Plan Header</label>
    <nameField>
        <displayFormat>CPPH-{000}</displayFormat>
        <label>Customer Pay Plan Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Pay Plan Headers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>