force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amount</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>