force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Amount_Demanded_Till_Date__c.field-meta.xml
<CustomField>
    <fullName>Amount_Demanded_Till_Date__c</fullName>
    <defaultValue>0</defaultValue>
    <description>total amount for which demand has been raised so far.</description>
    <label>Amount Demanded Till Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>