force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Amount_to_be_Reduced__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_be_Reduced__c</fullName>
    <label>Amount to be Reduced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>