force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Customer Pay Plan Headers</relationshipLabel>
    <relationshipName>Customer_Pay_Plan_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>