force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Pay Plan Headers</relationshipLabel>
    <relationshipName>Customer_Pay_Plan_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>