force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Effect_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Effect_To_Date__c</fullName>
    <label>Effect To Date</label>
    <type>DateTime</type>
</CustomField>