force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Global_Charge_Name__c.field-meta.xml
<CustomField>
    <fullName>Global_Charge_Name__c</fullName>
    <formula>Global_Charges__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global Charge Name</label>
    <type>Text</type>
</CustomField>