force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Global_Charges__c.field-meta.xml
<CustomField>
    <fullName>Global_Charges__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Global Charges</label>
    <referenceTo>Global_Charges__c</referenceTo>
    <relationshipLabel>Customer Pay Plan Headers</relationshipLabel>
    <relationshipName>Customer_Pay_Plan_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>