force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Int_Flatcost_Pending__c.field-meta.xml
<CustomField>
    <fullName>Int_Flatcost_Pending__c</fullName>
    <formula>Int_Flatcost_Due__c - ( Int_flatcost_Paid_Till_Date__c +  Int_flatcost_Waived_Till_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Int Flatcost (Pending)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>