force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Int_flatcost_Waived_Till_Date__c.field-meta.xml
<CustomField>
    <fullName>Int_flatcost_Waived_Till_Date__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Int Flatcost (Waived)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>