force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Int_Servicetax_Due__c.field-meta.xml
<CustomField>
    <fullName>Int_Servicetax_Due__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Int Servicetax (Due)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>