force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Int_servicetax_paid_till_date__c.field-meta.xml
<CustomField>
    <fullName>Int_servicetax_paid_till_date__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Int ServiceTax (Paid)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>