force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Int_Servicetax_Pending__c.field-meta.xml
<CustomField>
    <fullName>Int_Servicetax_Pending__c</fullName>
    <formula>Int_Servicetax_Due__c - ( Int_servicetax_waived_till_date__c  +  Int_servicetax_paid_till_date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Int Servicetax (Pending)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>