force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Outstanding_Service__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Service__c</fullName>
    <formula>Service_Tax_Demanded_Till_Date__c -  Service_Tax_Recd_Till_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>