force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Percent_Demanded__c.field-meta.xml
<CustomField>
    <fullName>Percent_Demanded__c</fullName>
    <formula>(Amount_Demanded_Till_Date__c /  Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Demanded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>