force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Percent_Paid__c.field-meta.xml
<CustomField>
    <fullName>Percent_Paid__c</fullName>
    <formula>Amount_Recd_Till_Date__c / Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>