force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/PlanCode__c.field-meta.xml
<CustomField>
    <fullName>PlanCode__c</fullName>
    <label>Plan Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>