force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Customer Pay Plan Headers</relationshipLabel>
    <relationshipName>Customer_Pay_Plan_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>