force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Project_Unit__c.field-meta.xml
<CustomField>
    <fullName>Project_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Unit</label>
    <referenceTo>Project_Unit__c</referenceTo>
    <relationshipLabel>Customer Pay Plan Headers</relationshipLabel>
    <relationshipName>Customer_Pay_Plan_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>