force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Project_Unit_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Unit_Status__c</fullName>
    <formula>TEXT( Project_Unit__r.RW_Unit_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Unit Status</label>
    <type>Text</type>
</CustomField>