force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Registration_Demand_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Registration_Demand_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration Demand Invoice</label>
    <referenceTo>Demand_Invoice__c</referenceTo>
    <relationshipLabel>Customer Pay Plan Headers</relationshipLabel>
    <relationshipName>Customer_Pay_Plan_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>