force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Registration_Intimation_Sent__c.field-meta.xml
<CustomField>
    <fullName>Registration_Intimation_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates whether the registration demand has been raised</description>
    <label>Registration Intimation Sent</label>
    <type>Checkbox</type>
</CustomField>