force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Registration_Reached__c.field-meta.xml
<CustomField>
    <fullName>Registration_Reached__c</fullName>
    <formula>if(  ( Global_Charge_Name__c == &apos;Basic&apos; &amp;&amp;  Percent_Paid__c &gt; 19.90/100),true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration % Reached</label>
    <type>Checkbox</type>
</CustomField>