force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Service_Tax_Recd_Till_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Tax_Recd_Till_Date__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Service Tax Recd Till Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>