force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/show_registration_demand__c.field-meta.xml
<CustomField>
    <fullName>show_registration_demand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>show registration demand</label>
    <type>Checkbox</type>
</CustomField>