force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Standard_Pay_Plan_Header__c.field-meta.xml
<CustomField>
    <fullName>Standard_Pay_Plan_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard Pay Plan Header</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Standard_Pay_Plan_Header__c.Tower__c</field>
            <operation>equals</operation>
            <valueField>$Source.Tower__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Standard_Pay_Plan_Header__c</referenceTo>
    <relationshipLabel>Customer Pay Plan Headers</relationshipLabel>
    <relationshipName>Customer_Pay_Plan_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>