force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Tax_Amount_1__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount_1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tax Amount 1</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>