force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Tax_Percentage_1__c.field-meta.xml
<CustomField>
    <fullName>Tax_Percentage_1__c</fullName>
    <label>Tax Percentage 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>