force-app/main/default/objects/Customer_Pay_Plan_Header__c/fields/Total_Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_Amount__c</fullName>
    <label>Total Interest Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>